--- a/css/style.css
+++ b/css/style.css
@@ -108,4 +108,29 @@ body {
 .top-nav .top-nav__right-panel ul li:nth-child(2) {
   margin-right: 40px;
 }
+
+.mid-bar {
+  width: 100%;
+  height: 1px;
+  background-color: #F5F5F5;
+}
+
+.main-nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+  gap: 70px;
+  height: 88px;
+}
+
+.main-nav ul li a {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  text-decoration: none;
+  color: #1A1A1A;
+}
 /*# sourceMappingURL=style.css.map */
