--- a/css/style.scss
+++ b/css/style.scss
@@ -131,3 +131,42 @@ body {
         }
     }
 }
+
+.searcher {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 32px;
+    align-items: center;
+    border: 8px solid $buttonColor;
+    border-radius: 4px;
+    background: #FFFFFF;
+
+    input {
+        flex-grow: 1;
+        padding: 0 24px;
+        height: 64px;
+        font-size: 14px;
+        font-family: 'Ubuntu', sans-serif;
+        color: #595959;
+        border: none;
+        background-color: transparent;
+    }
+
+    input:focus {
+        outline: none;
+    }
+
+    button {
+        margin-right: 12px;
+        height: 40px;
+        width: 124.25px;
+        border: none;
+        border-radius: 5px;
+        background-color: $buttonColor;
+        font-size: 16px;
+        font-family: 'Ubuntu', sans-serif;
+        font-weight: 700;
+        color: #fff;
+        cursor: pointer;
+    }
+}
