--- a/css/style.css
+++ b/css/style.css
@@ -180,4 +180,25 @@ body {
   color: #fff;
   cursor: pointer;
 }
+
+.swiper {
+  width: 100%;
+}
+
+.swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
 /*# sourceMappingURL=style.css.map */
