--- a/css/style.scss
+++ b/css/style.scss
@@ -194,3 +194,64 @@ body {
     display: block;
     width: 100%;
 }
+
+@media (max-width: 820px) {
+    .top-nav {
+        flex-direction: column;
+        margin: 15px auto 15px;
+
+        .top-nav__left-panel>ul>li:not(li:first-child) {
+            display: none;
+        }
+
+        .top-nav__left-panel>ul>li:first-child {
+            margin: 0 auto;
+
+            a {
+                height: 70px;
+
+                img {
+                    height: 100%;
+                }
+            }
+        }
+
+        .top-nav__right-panel>ul {
+            justify-content: space-evenly;
+            margin-top: 10px;
+
+            li:first-child,
+            li:nth-child(2) {
+                margin: 0;
+            }
+
+            li>a {
+                height: 20px;
+            }
+
+            li>a>img {
+                height: 100%;
+            }
+        }
+
+    }
+
+    .mobile-menu-button {
+        display: block;
+        margin: 10px auto;
+        font-size: 35px;
+        border: none;
+        color: $buttonColor;
+        background-color: transparent;
+        cursor: pointer;
+    }
+
+    .main-nav {
+        display: none;
+    }
+
+    .searcher {
+        margin-bottom: 15px;
+        border-width: 2px;
+    }
+}
